--- a/StillDer/neworderwindow.ui
+++ b/StillDer/neworderwindow.ui
@@ -113,7 +113,7 @@ background: transparent;</string>
    </property>
    <property name="styleSheet">
     <string notr="true">background: transparent;
-color: rgb(161, 117, 255);
+color: rgb(0,0,0);
 font: 63 10pt &quot;Bahnschrift&quot;;</string>
    </property>
    <property name="text">
@@ -134,7 +134,7 @@ font: 63 10pt &quot;Bahnschrift&quot;;</string>
    </property>
    <property name="styleSheet">
     <string notr="true">background: transparent;
-color: rgb(161, 117, 255);
+color: rgb(0,0,0);
 font: 63 10pt &quot;Bahnschrift&quot;;</string>
    </property>
    <property name="text">
@@ -152,7 +152,7 @@ font: 63 10pt &quot;Bahnschrift&quot;;</string>
    </property>
    <property name="styleSheet">
     <string notr="true">background: transparent;
-color: rgb(161, 117, 255);
+color: rgb(0,0,0);
 font: 63 10pt &quot;Bahnschrift&quot;;</string>
    </property>
    <property name="text">
@@ -162,7 +162,7 @@ font: 63 10pt &quot;Bahnschrift&quot;;</string>
   <widget class="QPushButton" name="Save">
    <property name="geometry">
     <rect>
-     <x>590</x>
+     <x>5</x>
      <y>120</y>
      <width>93</width>
      <height>31</height>
@@ -313,6 +313,40 @@ background-image:  url(:/Images/Stillder UI/AddAndRemove/Add/clicked.png);
    </property>
    <property name="text">
     <string>+</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="SelectSort">
+   <property name="geometry">
+    <rect>
+     <x>590</x>
+     <y>120</y>
+     <width>93</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">#SelectSort{
+background-image: url(:/Images/Stillder UI/SortButton/normal.png);
+border: none;
+}
+#SelectSort:hover
+{
+background-image: url(:/Images/Stillder UI/SortButton/hover.png);
+}
+
+#SelectSort:pressed
+{
+background-image: url(:/Images/Stillder UI/SortButton/clicked.png);
+}</string>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
